<resources>
    <string name="app_name">Nettezza Smart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Impostazioni</string>
    <string name="cancel">Cancella</string>
    <string name="substitute_photo">Vuoi scattare una nuova foto?</string>
    <string name="yes_shot">Scatta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quando">Quando:</string>
    <string name="stato_iniziale">Stato iniziale</string>
    <string name="gg_mm_anno">gg/mm/anno</string>
    <string name="richiesta_cod">Richiesta cod:</string>
    <string name="le_tue_richieste">Le tue richieste</string>
    <string name="nuova_richiesta">Nuova richiesta</string>
    <string name="via_roma_n_15_roma_1000">Via Roma, n.15, Roma, 1000</string>
    <string name="dove">Dove?</string>
    <string name="apri_il_calendario">Apri il calendario!</string>
    <string name="quando_ritirare">Quando ritirare?</string>
    <string name="nettezza_smart_l_applicazione_per_mettere_tutto_al_posto_giusto">Nettezza Smart, l\'applicazione per mettere tutto al posto giusto!</string>
    <string name="inizia_inserendo_i_tuoi_dati">Inizia inserendo i tuoi dati!</string>
    <string name="ciao_utente">Ciao utente!</string>
    <string name="inserisci_i_tuoi_dati">Inserisci i tuoi dati</string>
    <string name="mario">Mario</string>
    <string name="rossi">Rossi</string>
    <string name="mario_rossi_gmail_com">mario.rossi@gmail.com</string>
    <string name="_333123456">333123456</string>
    <string name="e_mail">E-mail</string>
    <string name="numero_di_telefono">Numero di telefono</string>
    <string name="i_tuoi_dati">I tuoi dati</string>
    <string name="modifica">Modifica</string>
    <string name="numero">Numero:</string>
    <string name="email">Email:</string>
    <string name="cognome2">Cognome:</string>
    <string name="nome2">Nome:</string>
    <string name="numero2">Numero</string>
    <string name="email2">Email</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="tipologia_di_rifiuti">Tipologia di rifiuti</string>
    <string name="commento">Commento</string>
    <string name="status_della_richiesta">status della richiesta</string>
    <string name="code">code</string>
    <string name="codice_richiesta">Codice richiesta</string>
    <string name="via_via_n_n_citt_cp">Via via n. n, Città CAP</string>
    <string name="luogo_del_ritiro">Luogo del ritiro:</string>
    <string name="gg_mm_aaaa">gg/mm/aaaa</string>
    <string name="giorno_scelto">Giorno scelto</string>
    <string name="la_tua_richiesta">La tua richiesta</string>
    <string name="status">Status:</string>
    <string name="retry">retry</string>
    <string name="ok">OK</string>
    <string name="le_tue_segnalazioni">Le tue segnalazioni</string>
    <string name="segnalaz_cod">Segnalaz. cod:</string>
    <string name="la_tua_segnalazione">La tua segnalazione</string>
    <string name="status_della_segnalazione">status della segnalazione</string>
    <string name="giorno_della_segnalazione">Giorno della segnalazione:</string>
    <string name="codice_segnalazione">Codice segnalazione:</string>
    <string name="posizione_della_segnalazione">Posizione della segnalazione:</string>
    <string name="segnalazione_rifiutata">La segnalazione è stata rifiutata</string>
    <string name="syncing">Syncing</string>
    <string name="segnalazione_ricevuta">La segnalazione è stata ricevuta</string>
    <string name="segnalazione_accolta">La segnalazione è stata accolta</string>
    <string name="operatore_segnalazione">Un operatore ha preso in carico la segnalazione</string>
    <string name="completato">Completato</string>
    <string name="operatore_richiesta">Un operatore ha preso in carico la richiesta</string>
    <string name="richiesta_accolta">La richiesta è stata accolta</string>
    <string name="richiesta_ricevuta">La richiesta è stata ricevuta</string>
    <string name="richiesta_rifiutata">La richiesta è stata rifiutata</string>
    <string name="wait_details">Aspetta che vengano sincronizzati i dettagli!</string>
    <string name="No_comment">Nessun commento</string>
    <string name="please_insert_image">Inserisci almeno una foto per procedere!</string>
    <string name="please_enable_GPS">Abilita il GPS o la tua connessione per continuare!</string>
    <string name="problem_gps">C\'è stato un problema nel rilevare la tua posizione!</string>
    <string name="problem">C\'è stato un problema</string>
    <string name="request_deleted">La tua richiesta è stata cancellata</string>
    <string name="problem_deleting_request">C\'è stato un problema nell\'eliminazione della richiesta</string>
    <string name="deleted_report">La tua segnalazione è stata cancellata</string>
    <string name="problem_deleting_report">C\'è stato un problema nell\'eliminazione della segnalazione</string>
    <string name="report_code">"Segnalazione cod."</string>
    <string name="request_code">"Richiesta cod."</string>
    <string name="no_connection">Nessuna connessione rilevata</string>
    <string name="problem_retrieving_elements">C\'è stato un problema con la sincronizzazione di qualche elemento</string>
    <string name="updated">Aggiornato</string>
    <string name="wait_for_previous_sync">Aspetta che la sincronizzazione precedente termini</string>
</resources>
